# Wavetable-Editor

./: .gitignore  CMakeLists.txt  EnvelopeEditor.cpp  EnvelopeEditor.h  LICENSE  README.md  control_structures.h  harmonics_control.cpp  harmonics_control.h  main.cpp  morph_preview.cpp  morph_preview.h  muJS LICENSE  opengl_utils.cpp  opengl_utils.h  oscilloscope_control.cpp  oscilloscope_control.h  util.h  wavetable_editor_ui.glade
